--- a/mediaalbum/src/main/AndroidManifest.xml
+++ b/mediaalbum/src/main/AndroidManifest.xml
@@ -23,7 +23,52 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application>
+        <activity
+            android:name=".app.mediaalbum.AlbumActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Album.Theme.Activity"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
 
+        <activity
+            android:name=".app.album.GalleryActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Album.Theme.Activity"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
+
+        <activity
+            android:name=".app.album.NullActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Album.Theme.Activity"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
+
+        <activity
+            android:name=".app.gallery.GalleryActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Album.Theme.Activity"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
+
+        <activity
+            android:name=".app.gallery.GalleryAlbumActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Album.Theme.Activity"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
+
+        <activity
+            android:name=".app.camera.CameraActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Album.Theme.Activity.Transparent"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
+
+        <provider
+            android:name=".provider.CameraFileProvider"
+            android:authorities="${applicationId}.app.file.provider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            android:multiprocess="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/album_camera_provider" />
+        </provider>
     </application>
 
 </manifest>
