--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <application
         android:name=".Application"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_sample"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/MediaAlbum.AppTheme">
